# ai-assistant-ollive

./: .env.example  .gitignore  README.md  app.py  config.py  generate_eval_report.py  guardrails.py  memory.py  observability.py  pyproject.toml  tool_dispatcher.py  tools.py
.github/workflows/: ci.yml
core/: guardrails.py  observability.py  tools.py
evaluator/: __init__.py  dataset.py  judge.py  runner.py
hf_space/: README.md  app.py  requirements.txt
models/: __init__.py  frontier_model.py  oss_model.py
prompts/: __init__.py  judge.py  safety.py  system.py
report/: ARCHITECTURE.md  COST_LATENCY.md  EVAL_REPORT.md
tests/: __init__.py  conftest.py  test_evaluator.py  test_guardrails.py  test_memory.py  test_tools.py
tools/: __init__.py  calculator.py  datetime_tool.py  web_search.py
ui/: __init__.py  chat_page.py  eval_page.py  styles.py
