[project]
name = "ai-assistant-ollive"
version = "0.2.0"
requires-python = ">=3.13"
dependencies = [
    "huggingface-hub>=1.16.1",
    "openai>=2.38.0",
    "pandas>=3.0.3",
    "plotly>=6.7.0",
    "python-dotenv>=1.2.2",
    "streamlit>=1.57.0",
    "langchain>=0.3.0",
    "langchain-openai>=0.3.0",
    "langchain-community>=0.3.0",
    "pytest>=8.0",
    "ruff>=0.8.0",
]
